# nuu-dictate

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  config.ini  main.py  pyproject.toml  setup_windows.py
.claude/: history.md  settings.local.json
nuu_dictate/: __init__.py  app.py  audio.py  cli.py  clipboard.py  config.py  feedback.py  transcription.py
tests/: __init__.py  test_app.py  test_audio.py  test_cli.py  test_clipboard.py  test_config.py  test_transcription.py
